--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <!--Importing the font used in this game-->
+ <script src="https://kit.fontawesome.com/6618333e0a.js" crossorigin="anonymous"></script>
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+ <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:wght@700&family=Lato:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
 </head>
