--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 class="heading">Rock Paper Scissors</h1>
+
+    <div class="game-area">
+    </div>
+    <div class="result-area"></div>
+
+    <div class="score-area"></div>
+
     <script src="assets/js/script.js"></script>
 </body>
 </html>
