--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:wght@700&family=Lato:wght@300&display=swap" rel="stylesheet">
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:wght@700&family=Inconsolata&family=Lato:wght@300&family=Noto+Color+Emoji&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/styles.css">
     <title>Document</title>
@@ -17,9 +20,20 @@
     <h1 class="heading">Rock Paper Scissors</h1>
 
     <div class="game-area">
+        <div class="controls-area">
+            <button class="btn btn--big btn--Rock" Rock>
+                <i class="far fa-hand-rock"></i>
+            </button>
+            <button class="btn btn--big btn--Paper">
+             <i class="fad fa-hand-paper"></i>
+            </button>
+            <button class="btn btn--big btn--Scissors">
+                <i class="far fa-hand-scissors"></i>
+            </button>
+            
+        </div>
     </div>
     <div class="result-area"></div>
-
     <div class="score-area"></div>
 
     <script src="assets/js/script.js"></script>
