--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading">Rock Paper Scissors</h1>
+    <h1 class="heading">lets Play!</h1>
 
     <div class="game-area">
         <div class="controls-area">
-            <button class="btn btn--big btn--Rock" Rock>
+            <button class="btn btn--big btn--Rock">
                 <i class="far fa-hand-rock"></i>
             </button>
             <button class="btn btn--big btn--Paper">
@@ -33,8 +33,13 @@
             
         </div>
     </div>
-    <div class="result-area"></div>
-    <div class="score-area"></div>
+    <div class="result-area">
+        result
+    </div>
+    <div class="score-area">
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
