--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
     <h1 class="heading">lets Play!</h1>
 
     <div class="game-area">
+        <h2 class="heading">Rock Paper Scissors</h2>
         <div class="controls-area">
             <button class="btn btn--big btn--Rock">
                 <i class="far fa-hand-rock"></i>
-            </button>
+         </button>
+
             <button class="btn btn--big btn--Paper">
              <i class="fad fa-hand-paper"></i>
-            </button>
+              </button>
+
             <button class="btn btn--big btn--Scissors">
-                <i class="far fa-hand-scissors"></i>
+            <i class="far fa-hand-scissors"></i>
             </button>
             
         </div>
