--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
 </head>
 <body>
     <h1 class="heading">lets Play!</h1>
+    <div class="rules">
+        <button class="rules-btn">rules</button>
+    </div>
 
     <div class="game-area">
         <h2 class="heading">Rock Paper Scissors</h2>
         <div class="controls-area">
+
             <button class="btn btn--big btn--Rock">
-                <i class="far fa-hand-rock"></i>
+             <i class="far fa-hand-rock"></i>
          </button>
 
             <button class="btn btn--big btn--Paper">
@@ -37,7 +41,7 @@
         </div>
     </div>
     <div class="result-area">
-        result
+        results
     </div>
     <div class="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
