--- a/index.html
+++ b/index.html
@@ -14,17 +14,34 @@
 <link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus:wght@700&family=Inconsolata&family=Lato:wght@300&family=Noto+Color+Emoji&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
+
     <title>Document</title>
 </head>
 <body>
     <h1 class="heading">lets Play!</h1>
     <div class="rules">
-        <button class="rules-btn">rules</button>
+        <button id="rules-btn">Rules</button>
     </div>
 
     <div class="game-area">
         <h2 class="heading">Rock Paper Scissors</h2>
-        <div class="controls-area">
+        <div class="player-area">
+
+            <button class="btn btn--big btn--Rock">
+             <i class="far fa-hand-rock"></i>
+         </button>
+
+            <button class="btn btn--big btn--Paper">
+             <i class="fad fa-hand-paper"></i>
+              </button>
+
+            <button class="btn btn--big btn--Scissors">
+            <i class="far fa-hand-scissors"></i>
+            </button>
+            
+        </div>
+        <div class="computer-area">
 
             <button class="btn btn--big btn--Rock">
              <i class="far fa-hand-rock"></i>
