--- a/index.html
+++ b/index.html
@@ -23,40 +23,41 @@
     <div class="rules">
         <button id="rules-btn">Rules</button>
     </div>
-
+<div class="game-box">
     <div class="game-area">
         <h2 class="heading">Rock Paper Scissors</h2>
         <div class="player-area">
 
-            <button class="btn btn--big btn--Rock">
+            <button class="btn btn--big btn--Rock btn--click" value="2">
              <i class="far fa-hand-rock"></i>
          </button>
 
-            <button class="btn btn--big btn--Paper">
+            <button class="btn btn--big btn--Paper btn--click" value="3">
              <i class="fad fa-hand-paper"></i>
               </button>
 
-            <button class="btn btn--big btn--Scissors">
+            <button class="btn btn--big btn--Scissors btn--click" value="1">
             <i class="far fa-hand-scissors"></i>
             </button>
             
         </div>
         <div class="computer-area">
 
-            <button class="btn btn--big btn--Rock">
+            <button class="btn btn--big btn--Rock btn--game-2">
              <i class="far fa-hand-rock"></i>
          </button>
 
-            <button class="btn btn--big btn--Paper">
+            <button class="btn btn--big btn--Paper btn--game-3">
              <i class="fad fa-hand-paper"></i>
               </button>
 
-            <button class="btn btn--big btn--Scissors">
+            <button class="btn btn--big btn--Scissors btn--game-1">
             <i class="far fa-hand-scissors"></i>
             </button>
             
         </div>
     </div>
+</div>
     <div class="result-area">
         results
     </div>
