--- a/index.html
+++ b/index.html
@@ -59,11 +59,12 @@
     </div>
 </div>
     <div class="result-area">
-        results
+        Results
     </div>
     <div class="score-area">
-        <p class="scores">Correct Answers <span id="score">0</span></p>
-        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
+        <p class="scores">You won: <span id="score">0</span></p>
+        <p class="scores">Computer won: <span id="incorrect">0</span></p>
+        <p class="scores">Tie: <span id="incorrect">0</span></p>
     </div>
 
     <script src="assets/js/script.js"></script>
