--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <h2 class="heading">Rock Paper Scissors</h2>
     <div class="rules">
         <button id="rules-btn">Rules</button>
+        <button id="rules-btn">Reset</button>
     </div>
+    
     <div class="game-area">
         <div class="player-area">
 
