--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2 class="heading">Rock Paper Scissors</h2>
     <div class="rules">
         <button id="rules-btn">Rules</button>
-        <button id="rules-btn">Reset</button>
+        <button id="reset-btn">Reset</button>
     </div>
     
     <div class="game-area">
@@ -64,9 +64,9 @@
         Results
     </div>
     <div class="score-area">
-        <p class="scores">You won: <span id="score">0</span></p>
-        <p class="scores">Computer won: <span id="incorrect">0</span></p>
-        <p class="scores">Tie: <span id="incorrect">0</span></p>
+        <div class="your-score">You won:</div>
+        <div class="computers-score">Computer won:</div>
+        <div class="draw">Tie:</div>
     </div>
 
     <script src="assets/js/script.js"></script>
