--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     
     <div class="game-area">
-        <div class="player-area">
+        <div class="player-area active">
 
             <button class="btn btn--big btn--Rock btn--click" value="2">
              <i class="far fa-hand-rock"></i>
@@ -64,9 +64,9 @@
         Results
     </div>
     <div class="score-area">
-        <div class="your-score">You won:</div>
-        <div class="computers-score">Computer won:</div>
-        <div class="draw">Tie:</div>
+        <div class="your-score">You won:<span>0</span></div>
+        <div class="computers-score">Computer won:<span>0</span></div>
+        <div class="draw">Tie:<span>0</span></div>
     </div>
 
     <script src="assets/js/script.js"></script>
