--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
 </div>
     <div class="result-area">
-        Results
+        Choose your Warrior 
     </div>
     <div class="score-area">
         <div class="your-score">You won:<span>0</span></div>
