--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="rules">
         <button id="rules-btn">Rules</button>
-        <button id="reset-btn">Reset</button>
+        <button id="reset-btn">Reset Game</button>
     </div>
     <h1 class="heading">lets Play!</h1>
 <div class="game-box">
@@ -36,7 +36,7 @@
          </button>
 
             <button class="btn btn--big btn--Paper btn--click" value="3">
-             <i class="fad fa-hand-paper"></i>
+                <i class="fa-solid fa-hands"></i>
               </button>
 
             <button class="btn btn--big btn--Scissors btn--click" value="1">
@@ -51,7 +51,7 @@
          </button>
 
             <button class="btn btn--big btn--Paper btn--game-3">
-             <i class="fad fa-hand-paper"></i>
+                <i class="fa-solid fa-hands"></i>
               </button>
 
             <button class="btn btn--big btn--Scissors btn--game-1">
