--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
 
-    <title>Document</title>
+    <title>Rock paper scissors</title>
+    <!-- Adding a favicon-->
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
 </head>
 <body>
     <div class="rules">
