--- a/index.html
+++ b/index.html
@@ -23,6 +23,20 @@
 <body>
     <div class="rules">
         <button id="rules-btn">Rules</button>
+        <!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h1>Rules</h1>
+      <li>Rock wins against scissors.</li>
+      <li>Paper wins against rock.</li>
+      <li>Scissors wins against paper.</li>
+      <p>If both players throw the same hand signal, it is considered a tie, and play resumes until there is a clear winner.</p>
+    </div>
+  
+  </div>
         <button id="reset-btn">Reset Game</button>
     </div>
     <h1 class="heading">lets Play!</h1>
