--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h1>Rules</h1>
+      <div class="icon-game">
+        <i class="far fa-hand-rock"></i>
+        <p>Rock</p>
+        <i class="fa-solid fa-hands"></i>
+        <p>Paper</p>
+        <i class="far fa-hand-scissors"></i>
+        <p>Scissors</p>
+        </div>
       <li>Rock wins against scissors.</li>
       <li>Paper wins against rock.</li>
       <li>Scissors wins against paper.</li>
       <p>If both players throw the same hand signal, it is considered a tie, and play resumes until there is a clear winner.</p>
+
     </div>
   
   </div>
