--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
         <i class="far fa-hand-scissors"></i>
         <p>Scissors</p>
         </div>
+        <ul class="modal-list">
       <li>Rock wins against scissors.</li>
       <li>Paper wins against rock.</li>
       <li>Scissors wins against paper.</li>
-      <p>If both players throw the same hand signal, it is considered a tie, and play resumes until there is a clear winner.</p>
-
+    </ul>
+    <p>If both players throw the same hand signal, it is considered a tie, and play resumes until there is a clear winner.</p>
     </div>
   
   </div>
