--- a/index.html
+++ b/index.html
@@ -59,30 +59,30 @@
 
             <button class="btn btn--big btn--Rock btn--click" value="2">
              <i class="far fa-hand-rock"></i>
-         </button>
+         <h3 class="icon-name">Rock</h3></button>
 
             <button class="btn btn--big btn--Paper btn--click" value="3">
                 <i class="fa-solid fa-hands"></i>
-              </button>
+              <h3 class="icon-name">Paper</h3></button>
 
             <button class="btn btn--big btn--Scissors btn--click" value="1">
             <i class="far fa-hand-scissors"></i>
-            </button>
+            <h3 class="icon-name">Scissors</h3></button>
             
         </div>
         <div class="computer-area">
 
             <button class="btn btn--big btn--Rock btn--game-2">
              <i class="far fa-hand-rock"></i>
-         </button>
+             <h3 class="icon-name">Rock</h3></button>
 
             <button class="btn btn--big btn--Paper btn--game-3">
                 <i class="fa-solid fa-hands"></i>
-              </button>
+                <h3 class="icon-name">Paper</h3></button>
 
             <button class="btn btn--big btn--Scissors btn--game-1">
             <i class="far fa-hand-scissors"></i>
-            </button>
+            <h3 class="icon-name">Scissors</h3></button>
             
         </div>
     </div>
