--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Rock paper scissors</title>
     <!-- Adding a favicon-->
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+    <link rel="icon" type="image" href="/assets/images/favicon.ico">
 </head>
 <body>
     <div class="rules">
