fix the favicon tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
 
       <!-- Adding a favicon -->
-      <link rel="icon" type="image" href="/assets/images/favicon.ico">
+      <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+
     
     <!-- Title of the page -->
     <title>Rock paper scissors</title>
