add the rules and the icon names

--- a/index.html
+++ b/index.html
@@ -49,19 +49,16 @@
                     <!-- Rock icon and description -->
                     <i class="far fa-hand-rock"></i>
                     <p>Rock</p>
+                    <p>It wins against scissors but is defeated by paper.</p>
                     <!-- Paper icon and description -->
                     <i class="fa-solid fa-hands"></i>
                     <p>Paper</p>
+                    <p>It wins against rock but loses to scissors.</p>
                     <!-- Scissors icon and description -->
                     <i class="far fa-hand-scissors"></i>
                     <p>Scissors</p>
+                    <p>Scissors win against paper but are defeated by rock.</p>
                 </div>
-                <!-- List of rules -->
-                <ul class="modal-list">
-                    <li>Rock wins against scissors.</li>
-                    <li>Paper wins against rock.</li>
-                    <li>Scissors wins against paper.</li>
-                </ul>
                 <!-- Explanation of ties -->
                 <p>If both players throw the same hand signal, it is considered a tie, and play resumes until there is a clear winner.</p>
             </div>
